Fixed problem for why album show was not showing up

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -23,3 +23,7 @@ body {
   padding: 70px;
   height: 100%;
 }
+
+.photo {
+  padding: 20px;
+}
